불필요 api 제거

--- a/note/mnist-predict.ipynb
+++ b/note/mnist-predict.ipynb
@@ -41,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "94c8e582-55ff-4d6e-bfab-d9b02614bfb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 30ms/step\n",
+      "예측 결과: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# 사용자 이미지 불러오기 및 전처리\n",
     "def preprocess_image(image_path):\n",
@@ -64,7 +73,10 @@
     "    img = preprocess_image(image_path)\n",
     "    prediction = model.predict(img)\n",
     "    digit = np.argmax(prediction)\n",
-    "    return digit"
+    "    return digit\n",
+    "\n",
+    "p = predict_digit('train_img/0_1.png')\n",
+    "print(f'예측 결과: {p}')"
    ]
   },
   {
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "id": "c96fe305-2b7c-43a9-91be-30924cffa4b6",
    "metadata": {},
    "outputs": [
