--- a/note/mnist-predict.ipynb
+++ b/note/mnist-predict.ipynb
@@ -56,13 +56,15 @@
    ],
    "source": [
     "# 사용자 이미지 불러오기 및 전처리\n",
-    "def preprocess_image(image_path):\n",
+    "def preprocess_image(image_path, invert=False):\n",
     "    img = Image.open(image_path).convert('L')  # 흑백 이미지로 변환\n",
     "    img = img.resize((28, 28))  # 크기 조정\n",
     "\n",
-    "    # 흑백 반전\n",
-    "    # img = 255 - np.array(img)  # 흑백 반전\n",
-    "    img = np.array(img)\n",
+    "    if invert:\n",
+    "        img = 255 - np.array(img)  # 흑백 반전\n",
+    "    else:\n",
+    "        img = np.array(img)\n",
+    "\n",
     "    \n",
     "    img = img.reshape(1, 28, 28, 1)  # 모델 입력 형태에 맞게 변형\n",
     "    img = img / 255.0  # 정규화\n",
