--- a/note/CNN.ipynb
+++ b/note/CNN.ipynb
@@ -676,8 +676,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "ebacafc4-46af-4bd8-8d4f-d10df048271b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.9803 - loss: 0.1732\n",
+      "Loss = 0.13457091152668\n",
+      "Accuracy = 0.9847000241279602\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = model.evaluate(x_test_vec, y_test_vec)\n",
+    "\n",
+    "print('Loss =', str(r[0]))\n",
+    "print('Accuracy =', str(r[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "9fdb95dd-74ac-4995-932a-8da2590983f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('mnist984.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "a62843f0-e8f0-4afb-86a0-628fce22f1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('mnist984.keras')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4c5b9a6-3198-4241-ab61-dc850a39821f",
    "metadata": {},
    "outputs": [],
    "source": []
